--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,16 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://YashThakur-997.github.io/TechGigs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "express": "^5.1.0",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.9",
     "mongoose": "^8.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -30,6 +35,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
   }
